APIs/googleapis.com/drive/v3/java-client/README.md
# openapi-java-client

Google Drive API
- API version: v3
  - Build date: 2024-10-12T11:43:32.870459-04:00[America/New_York]
  - Generator version: 7.9.0

The Google Drive API allows clients to access resources from Google Drive.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v3</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v3"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v3.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.AboutApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://www.googleapis.com/drive/v3");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    AboutApi apiInstance = new AboutApi(defaultClient);
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    try {
      About result = apiInstance.driveAboutGet($xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling AboutApi#driveAboutGet");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/drive/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AboutApi* | [**driveAboutGet**](docs/AboutApi.md#driveAboutGet) | **GET** /about | 
*AppsApi* | [**driveAppsGet**](docs/AppsApi.md#driveAppsGet) | **GET** /apps/{appId} | 
*AppsApi* | [**driveAppsList**](docs/AppsApi.md#driveAppsList) | **GET** /apps | 
*ChangesApi* | [**driveChangesGetStartPageToken**](docs/ChangesApi.md#driveChangesGetStartPageToken) | **GET** /changes/startPageToken | 
*ChangesApi* | [**driveChangesList**](docs/ChangesApi.md#driveChangesList) | **GET** /changes | 
*ChangesApi* | [**driveChangesWatch**](docs/ChangesApi.md#driveChangesWatch) | **POST** /changes/watch | 
*ChannelsApi* | [**driveChannelsStop**](docs/ChannelsApi.md#driveChannelsStop) | **POST** /channels/stop | 
*CommentsApi* | [**driveCommentsCreate**](docs/CommentsApi.md#driveCommentsCreate) | **POST** /files/{fileId}/comments | 
*CommentsApi* | [**driveCommentsDelete**](docs/CommentsApi.md#driveCommentsDelete) | **DELETE** /files/{fileId}/comments/{commentId} | 
*CommentsApi* | [**driveCommentsGet**](docs/CommentsApi.md#driveCommentsGet) | **GET** /files/{fileId}/comments/{commentId} | 
*CommentsApi* | [**driveCommentsList**](docs/CommentsApi.md#driveCommentsList) | **GET** /files/{fileId}/comments | 
*CommentsApi* | [**driveCommentsUpdate**](docs/CommentsApi.md#driveCommentsUpdate) | **PATCH** /files/{fileId}/comments/{commentId} | 
*DrivesApi* | [**driveDrivesCreate**](docs/DrivesApi.md#driveDrivesCreate) | **POST** /drives | 
*DrivesApi* | [**driveDrivesDelete**](docs/DrivesApi.md#driveDrivesDelete) | **DELETE** /drives/{driveId} | 
*DrivesApi* | [**driveDrivesGet**](docs/DrivesApi.md#driveDrivesGet) | **GET** /drives/{driveId} | 
*DrivesApi* | [**driveDrivesHide**](docs/DrivesApi.md#driveDrivesHide) | **POST** /drives/{driveId}/hide | 
*DrivesApi* | [**driveDrivesList**](docs/DrivesApi.md#driveDrivesList) | **GET** /drives | 
*DrivesApi* | [**driveDrivesUnhide**](docs/DrivesApi.md#driveDrivesUnhide) | **POST** /drives/{driveId}/unhide | 
*DrivesApi* | [**driveDrivesUpdate**](docs/DrivesApi.md#driveDrivesUpdate) | **PATCH** /drives/{driveId} | 
*FilesApi* | [**driveFilesCopy**](docs/FilesApi.md#driveFilesCopy) | **POST** /files/{fileId}/copy | 
*FilesApi* | [**driveFilesCreate**](docs/FilesApi.md#driveFilesCreate) | **POST** /files | 
*FilesApi* | [**driveFilesDelete**](docs/FilesApi.md#driveFilesDelete) | **DELETE** /files/{fileId} | 
*FilesApi* | [**driveFilesEmptyTrash**](docs/FilesApi.md#driveFilesEmptyTrash) | **DELETE** /files/trash | 
*FilesApi* | [**driveFilesExport**](docs/FilesApi.md#driveFilesExport) | **GET** /files/{fileId}/export | 
*FilesApi* | [**driveFilesGenerateIds**](docs/FilesApi.md#driveFilesGenerateIds) | **GET** /files/generateIds | 
*FilesApi* | [**driveFilesGet**](docs/FilesApi.md#driveFilesGet) | **GET** /files/{fileId} | 
*FilesApi* | [**driveFilesList**](docs/FilesApi.md#driveFilesList) | **GET** /files | 
*FilesApi* | [**driveFilesListLabels**](docs/FilesApi.md#driveFilesListLabels) | **GET** /files/{fileId}/listLabels | 
*FilesApi* | [**driveFilesModifyLabels**](docs/FilesApi.md#driveFilesModifyLabels) | **POST** /files/{fileId}/modifyLabels | 
*FilesApi* | [**driveFilesUpdate**](docs/FilesApi.md#driveFilesUpdate) | **PATCH** /files/{fileId} | 
*FilesApi* | [**driveFilesWatch**](docs/FilesApi.md#driveFilesWatch) | **POST** /files/{fileId}/watch | 
*PermissionsApi* | [**drivePermissionsCreate**](docs/PermissionsApi.md#drivePermissionsCreate) | **POST** /files/{fileId}/permissions | 
*PermissionsApi* | [**drivePermissionsDelete**](docs/PermissionsApi.md#drivePermissionsDelete) | **DELETE** /files/{fileId}/permissions/{permissionId} | 
*PermissionsApi* | [**drivePermissionsGet**](docs/PermissionsApi.md#drivePermissionsGet) | **GET** /files/{fileId}/permissions/{permissionId} | 
*PermissionsApi* | [**drivePermissionsList**](docs/PermissionsApi.md#drivePermissionsList) | **GET** /files/{fileId}/permissions | 
*PermissionsApi* | [**drivePermissionsUpdate**](docs/PermissionsApi.md#drivePermissionsUpdate) | **PATCH** /files/{fileId}/permissions/{permissionId} | 
*RepliesApi* | [**driveRepliesCreate**](docs/RepliesApi.md#driveRepliesCreate) | **POST** /files/{fileId}/comments/{commentId}/replies | 
*RepliesApi* | [**driveRepliesDelete**](docs/RepliesApi.md#driveRepliesDelete) | **DELETE** /files/{fileId}/comments/{commentId}/replies/{replyId} | 
*RepliesApi* | [**driveRepliesGet**](docs/RepliesApi.md#driveRepliesGet) | **GET** /files/{fileId}/comments/{commentId}/replies/{replyId} | 
*RepliesApi* | [**driveRepliesList**](docs/RepliesApi.md#driveRepliesList) | **GET** /files/{fileId}/comments/{commentId}/replies | 
*RepliesApi* | [**driveRepliesUpdate**](docs/RepliesApi.md#driveRepliesUpdate) | **PATCH** /files/{fileId}/comments/{commentId}/replies/{replyId} | 
*RevisionsApi* | [**driveRevisionsDelete**](docs/RevisionsApi.md#driveRevisionsDelete) | **DELETE** /files/{fileId}/revisions/{revisionId} | 
*RevisionsApi* | [**driveRevisionsGet**](docs/RevisionsApi.md#driveRevisionsGet) | **GET** /files/{fileId}/revisions/{revisionId} | 
*RevisionsApi* | [**driveRevisionsList**](docs/RevisionsApi.md#driveRevisionsList) | **GET** /files/{fileId}/revisions | 
*RevisionsApi* | [**driveRevisionsUpdate**](docs/RevisionsApi.md#driveRevisionsUpdate) | **PATCH** /files/{fileId}/revisions/{revisionId} | 
*TeamdrivesApi* | [**driveTeamdrivesCreate**](docs/TeamdrivesApi.md#driveTeamdrivesCreate) | **POST** /teamdrives | 
*TeamdrivesApi* | [**driveTeamdrivesDelete**](docs/TeamdrivesApi.md#driveTeamdrivesDelete) | **DELETE** /teamdrives/{teamDriveId} | 
*TeamdrivesApi* | [**driveTeamdrivesGet**](docs/TeamdrivesApi.md#driveTeamdrivesGet) | **GET** /teamdrives/{teamDriveId} | 
*TeamdrivesApi* | [**driveTeamdrivesList**](docs/TeamdrivesApi.md#driveTeamdrivesList) | **GET** /teamdrives | 
*TeamdrivesApi* | [**driveTeamdrivesUpdate**](docs/TeamdrivesApi.md#driveTeamdrivesUpdate) | **PATCH** /teamdrives/{teamDriveId} | 


## Documentation for Models

 - [About](docs/About.md)
 - [AboutDriveThemesInner](docs/AboutDriveThemesInner.md)
 - [AboutStorageQuota](docs/AboutStorageQuota.md)
 - [AboutTeamDriveThemesInner](docs/AboutTeamDriveThemesInner.md)
 - [App](docs/App.md)
 - [AppIcons](docs/AppIcons.md)
 - [AppList](docs/AppList.md)
 - [Change](docs/Change.md)
 - [ChangeList](docs/ChangeList.md)
 - [Channel](docs/Channel.md)
 - [Comment](docs/Comment.md)
 - [CommentList](docs/CommentList.md)
 - [CommentQuotedFileContent](docs/CommentQuotedFileContent.md)
 - [ContentRestriction](docs/ContentRestriction.md)
 - [Drive](docs/Drive.md)
 - [DriveBackgroundImageFile](docs/DriveBackgroundImageFile.md)
 - [DriveCapabilities](docs/DriveCapabilities.md)
 - [DriveList](docs/DriveList.md)
 - [DriveRestrictions](docs/DriveRestrictions.md)
 - [FileCapabilities](docs/FileCapabilities.md)
 - [FileContentHints](docs/FileContentHints.md)
 - [FileContentHintsThumbnail](docs/FileContentHintsThumbnail.md)
 - [FileImageMediaMetadata](docs/FileImageMediaMetadata.md)
 - [FileImageMediaMetadataLocation](docs/FileImageMediaMetadataLocation.md)
 - [FileLabelInfo](docs/FileLabelInfo.md)
 - [FileLinkShareMetadata](docs/FileLinkShareMetadata.md)
 - [FileList](docs/FileList.md)
 - [FileShortcutDetails](docs/FileShortcutDetails.md)
 - [FileVideoMediaMetadata](docs/FileVideoMediaMetadata.md)
 - [GeneratedIds](docs/GeneratedIds.md)
 - [Label](docs/Label.md)
 - [LabelField](docs/LabelField.md)
 - [LabelFieldModification](docs/LabelFieldModification.md)
 - [LabelList](docs/LabelList.md)
 - [LabelModification](docs/LabelModification.md)
 - [ModelFile](docs/ModelFile.md)
 - [ModifyLabelsRequest](docs/ModifyLabelsRequest.md)
 - [ModifyLabelsResponse](docs/ModifyLabelsResponse.md)
 - [Permission](docs/Permission.md)
 - [PermissionList](docs/PermissionList.md)
 - [PermissionPermissionDetailsInner](docs/PermissionPermissionDetailsInner.md)
 - [PermissionTeamDrivePermissionDetailsInner](docs/PermissionTeamDrivePermissionDetailsInner.md)
 - [Reply](docs/Reply.md)
 - [ReplyList](docs/ReplyList.md)
 - [Revision](docs/Revision.md)
 - [RevisionList](docs/RevisionList.md)
 - [StartPageToken](docs/StartPageToken.md)
 - [TeamDrive](docs/TeamDrive.md)
 - [TeamDriveBackgroundImageFile](docs/TeamDriveBackgroundImageFile.md)
 - [TeamDriveCapabilities](docs/TeamDriveCapabilities.md)
 - [TeamDriveList](docs/TeamDriveList.md)
 - [TeamDriveRestrictions](docs/TeamDriveRestrictions.md)
 - [User](docs/User.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/drive: See, edit, create, and delete all of your Google Drive files
  - https://www.googleapis.com/auth/drive.appdata: See, create, and delete its own configuration data in your Google Drive
  - https://www.googleapis.com/auth/drive.apps.readonly: View your Google Drive apps
  - https://www.googleapis.com/auth/drive.file: See, edit, create, and delete only the specific Google Drive files you use with this app
  - https://www.googleapis.com/auth/drive.metadata: View and manage metadata of files in your Google Drive
  - https://www.googleapis.com/auth/drive.metadata.readonly: See information about your Google Drive files
  - https://www.googleapis.com/auth/drive.photos.readonly: View the photos, videos and albums in your Google Photos
  - https://www.googleapis.com/auth/drive.readonly: See and download all your Google Drive files
  - https://www.googleapis.com/auth/drive.scripts: Modify your Google Apps Script scripts&#39; behavior

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/drive: See, edit, create, and delete all of your Google Drive files
  - https://www.googleapis.com/auth/drive.appdata: See, create, and delete its own configuration data in your Google Drive
  - https://www.googleapis.com/auth/drive.apps.readonly: View your Google Drive apps
  - https://www.googleapis.com/auth/drive.file: See, edit, create, and delete only the specific Google Drive files you use with this app
  - https://www.googleapis.com/auth/drive.metadata: View and manage metadata of files in your Google Drive
  - https://www.googleapis.com/auth/drive.metadata.readonly: See information about your Google Drive files
  - https://www.googleapis.com/auth/drive.photos.readonly: View the photos, videos and albums in your Google Photos
  - https://www.googleapis.com/auth/drive.readonly: See and download all your Google Drive files
  - https://www.googleapis.com/auth/drive.scripts: Modify your Google Apps Script scripts&#39; behavior


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



